--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <div class="container">
         <div class="todo-app">
             <h2>To-Do List <img src="images/check-list.png" alt=""></h2>
+            <div class="row">
+                <input type="text" id="input-box" placeholder="Add your text">
+                <button>Add</button>
+            </div>
         </div>
     </div>
 </body>
